# pbench-lite

./: requirements.txt  setup.cfg  tox.ini
lib/pbench/agent/: config.py  fs.py  sysinfo.py  triggers.py  utils.py
lib/pbench/agent/tools/: __init__.py  state.py
lib/pbench/cli/: __main__.py
lib/pbench/cli/commands/: base.py  cleanup.py  config.py  options.py  results.py  shell.py  stddev.py  sysinfo.py  timestamp.py  triggers.py
lib/pbench/cli/commands/tools/: __init__.py  clear.py  kill.py  list.py  postprocess.py  register.py  start.py  stop.py  test.py
