[metadata]
name = pbench
summary = A benchmarking and performance analysis framework
description-file =
    README.md
author = Pbench by Red Hat
maintainer = Pbench by Red Hat
home-page = https://github.com/distributed-system-analysis/pbench
classifier =
   Programming Language :: Python :: 3.6,
   License :: OSI Approved :: GNU General Public License v3 (GPLv3),
   Operating System :: OS Independent,

[entry_points]
console_scripts = 
   pbench-config = pbench.cli.getconf:main
   pbench = pbench.cli.__main__:main

   # backwards-compat
   pbench-cleanup = pbench.cli.commands.cleanup:cleanup
   pbench-agent-config-activate = pbench.cli.commands.config:activate
   pbench-agent-config-ssh-key = pbench.cli.commands.config:ssh
   pbench-clear-results = pbench.cli.commands.results:clear
   pbench-clear-tools = pbench.cli.commands.tools.clear:clear
   pbench-list-tools = pbench.cli.commands.tools.list:list
   pbench-start-tools = pbench.cli.commands.tools.start:start
   pbench-stop-tools = pbench.cli.commands.tools.stop:stop
   pbench-kill-tools = pbench.cli.commands.tools.kill:kill
   pbench-register-tool = pbench.cli.commands.register:register
   pbench-list-triggers = pbench.cli.commands.triggers:list
   pbench-register-trigger  = pbench.cli.commands.triggers:register
   pbench-collect-sysinfo = pbench.cli.commands.sysinfo:collect

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =lib

[options.packages.find]
where = lib

[tools:pytest]
testpaths = lib/pbench/test
